# mini-lambda

./: .gitignore  Makefile  README.md  ast.ml  backend_armv7.ml  backend_x86_64.ml  dune-project  i0.ml  i0.mli  i1.ml  i2.ml  i2.mli  i3.ml  i4.ml  ir.ml  ir_lowering.ml  lamba.sh  lambda  lambda.opam  lexer.mll  main.ml  parser.mly  runtime_x86_64.S  test.sh  typed_ast.ml  typing.ml
asm/: runtime_x86_64.S
full-test/: Makefile
full-test/add/: negative.in  test.lambda
full-test/after-return/: test.lambda
full-test/capture/: test.lambda
full-test/cps/: test.lambda
full-test/early-return/: test.lambda
full-test/enum/: ni.out  test.lambda
full-test/equal/: test.lambda
full-test/factorial/: test.lambda
full-test/fibb/: test.lambda
full-test/full/: test.lambda
full-test/if/: test.lambda
full-test/ignore/: test.lambda
full-test/mutual-recursion/: test.lambda
full-test/print/: test.lambda
full-test/rebind/: test.lambda
full-test/sub/: test.lambda
full-test/while/: test.lambda
runtime/: lambda.h  runtime.c
src/: Makefile  analysis.ml  analysis.mli  ast.ml  backend.ml  backend.mli  backend_armv7.ml  backend_armv7.mli  backend_x86_64.ml  dune  graph.ml  i0.ml  i0.mli  i1.ml  i2.ml  i3.ml  i4.ml  i5.ml  i5.mli  i6.ml  ir.ml  ir_lowering.ml  ir_lowering.mli  lambda.ml  lexer.mll  lir.ml  lir_lowering.ml  lir_lowering.mli  main.ml  ops.ml  parser.mly  typed_ast.ml  typing.ml
tests/: add.lambda  factorial.lambda  fibb.lambda  if-expression.lambda  ignore.lambda  rebind.lambda
tests/after-return/: after-return.lambda
tests/cps/: cps.lambda
(+13 files in other folders)
